<resources>
    <string name="app_name">Panaderia</string>
    <string name="txt_registro">Registro</string>
    <string name="default_web_client_id">897804011884-667dspe12tfhtf26l53d85eth4p211ic.apps.googleusercontent.com</string>
    <string name="et_Nombres">Nombres</string>
    <string name="et_Apellidos">Apellidos</string>
    <string name="txt_nombres">Nombres: </string>
    <string name="tv_nombres">--</string>
    <string name="txt_email">Email: </string>
    <string name="tv_email">--</string>
    <string name="txt_proveedor">Proveedor: </string>
    <string name="tv_proveedor">--</string>
    <string name="txt_t_registro">Miembro desde: </string>
    <string name="txt_apellidos">Apellidos: </string>
    <string name="tv_apellidos">--</string>
    <string name="tv_t_registro">--</string>
    <string name="txt_titulo_edit">Editar Informacion</string>
    <string name="et_R_Password">Repita la Contraseña</string>
    <string name="btn_Cerrarsesion">Cerrar Sesión</string>
    <string name="btn_CambiarPass">Cambiar Contraseña</string>
    <string name="Txt_Cambiar_pass">Cambiar Contraseña</string>
    <string name="et_pass_actual">Contraseña Actual</string>
    <string name="et_pass_nueva">Contraseña Nueva</string>
    <string name="et_r_pass_nueva">Repepitr Contrseña</string>
    <string name="btn_CambiarPassword">Cambiar</string>
    <string name="Txt_olvide_pass">Olvidé Contraseña</string>
    <string name="btn_EditarCampos">Editar Campos</string>
    <string name="btn_Registrar">Registrar</string>
    <string name="item_Inicio">Inicio</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="btn_enviar">Enviar</string>
    <string name="item_pedidos">Pedidos</string>
    <string name="Txt_ingrese_email">Ingrese su Correo para la recuperación</string>
    <string name="tv_Titulo">Titulo</string>
    <string name="btn_Actualizar">Actualizar</string>
    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>
    <string name="tx_cliente">Cliente</string>
    <string name="item_puntos">Puntos</string>
    <string name="item_perfil">Perfil</string>
    <string name="txt_login">Iniciar Sesión</string>
    <string name="et_email">Correo Electrónico</string>
    <string name="et_password">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tienes una Cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>
    <string name="tv_recuperar_cuenta">¿Olvidaste la Contraseña<b> Recuperar</b></string>
    <string name="title_login">Iniciar Sesión</string>
    <string name="title_correo">Correo</string>
    <string name="tittle_password">Contraseña</string>
    <string name="title_breadfast">BreadFast</string>
    <string name="init_description">Tu panadería de confianza, ahora en tu móvil</string>
    <string name="init_description_v2">Sabor y tradición, en un app sin igual</string>
    <string name="txt_button_init_session">Iniciar Sesión</string>
    <string name="txt_button_init_register">Registrarse</string>
    <string name="rb_client">Cliente</string>
    <string name="rb_sellet">Vendedor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Nombe</string>
    <string name="email">Correo</string>
    <string name="hint_user_name">Ingrese su nombre</string>
    <string name="hint_email">Ingrese su correo</string>
    <string name="hint_user_last_name">Ingrese sus apellidos</string>
    <string name="last_name">Apellidos</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="hint_user_hint_email">Ingrese su correo</string>
    <string name="hint_user_password">Ingrese su contraseña</string>
    <string name="hint_user_confirm_password">Ingrese su contraseña</string>
    <string name="img_content">Imagen de contenido</string>
    <string name="otp">Clave</string>
    <string name="hint_user_otp">Ingrese su clave</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_carrito_de_compras">Carrito de compras</string>
    <string name="home_txt_name_client">Ana Perez</string>
    <string name="my_order">Mi pedido</string>
    <string name="search_product">Buscar producto</string>
    <string name="tvCategorias">Categorias</string>
    <string name="home_image">Home Image</string>
    <string name="accumulate_poinst_for_purchases">Acumula puntos por tus compras</string>
    <string name="tortas">Tortas</string>
    <string name="panes">Panes</string>
    <string name="bocaditos">Bocaditos</string>
    <string name="piononos">Piononos</string>
    <string name="alfajor1">Alfajor</string>
    <string name="chocolate">Chocolate</string>
    <string name="price_product">S/ 50.00</string>
    <string name="plus_button">+</string>
    <string name="button_plus">Button plus</string>
    <string name="user_logged">%1$s %2$s</string>
    <string name="productos">Productos</string>
    <string name="item_cart_description">descripcion del producto de carrito</string>
    <string name="cheesecake_chocolate">Cheesecake Chocolate</string>
    <string name="cremosa_con_intenso_sabor_a_chocolate">Cremosa, con intenso sabor a chocolate...</string>
    <string name="s_50_00">S/ 50.00</string>
    <string name="next_button">Siguiente</string>
</resources>