<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".fragments.FragmentPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_perfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_img_perfil" />

        <!--Nombres-->
        <TextView
            android:id="@+id/txt_nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_perfil"
            android:layout_marginTop="20dp"
            android:text="@string/txt_nombres" />

        <TextView
            android:id="@+id/tv_nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_perfil"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:text="@string/tv_nombres" />


        <!--Apellidos-->


        <TextView
            android:id="@+id/txt_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_nombres"
            android:layout_marginTop="20dp"
            android:text="@string/txt_apellidos" />

        <TextView
            android:id="@+id/tv_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_nombres"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:text="@string/tv_apellidos" />

        <TextView

            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_apellidos"
            android:layout_marginTop="20dp"
            android:text="@string/txt_email" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_apellidos"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:text="@string/tv_email" />


        <TextView
            android:id="@+id/txt_proveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_marginTop="20dp"
            android:text="@string/txt_proveedor" />

        <TextView
            android:id="@+id/tv_proveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:text="@string/tv_proveedor" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_CerrarSesion"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_EditarCampos"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button"
            android:text="@string/btn_Cerrarsesion"
            android:textAllCaps="true"
            app:cornerRadius="8dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_EditarCampos"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_t_registro"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/button"
            android:text="@string/btn_EditarCampos"
            android:textAllCaps="true"
            app:cornerRadius="8dp" />

        <TextView
            android:id="@+id/txt_t_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_proveedor"
            android:layout_marginTop="20dp"
            android:text="@string/txt_t_registro" />

        <TextView
            android:id="@+id/tv_t_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_proveedor"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:text="@string/tv_t_registro" />


    </RelativeLayout>


</ScrollView>